fixed a few minor mistakes